# timeseries.rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: README.md  plot.rs
examples/plot/: Cargo.toml  README.md
examples/plot/src/: main.rs
src/: index.rs  lib.rs  series.rs  timeseries.rs
src/io/: csv.rs
