[package]
name = "timeseries"
version = "0.1.5"
authors = ["Krzysztof Langner <klangner@gmail.com>"]
description = "time Series library"
keywords = ["timeseries"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/klangner/timeseries.rs"
homepage = "https://github.com/klangner/timeseries.rs"
documentation = "https://docs.rs/timeseries"
readme = "README.md"
edition = "2018"


[dependencies]
chrono = "0.4"
rand = "0.6"
lexical = "^2.2"
csv = "1.1"

[dev-dependencies]
assert_approx_eq = "1.1.0"
gnuplot = "0.0.31"
clap = "2"
criterion = "0.2"